--- a/qr-code-component/style.css
+++ b/qr-code-component/style.css
@@ -31,11 +31,11 @@ body {
   place-content: center;
 }
 
-.container {
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  margin-bottom: 25px;
 }
 
 .card {
